@@ -141,6 +141,12 @@ class Parser:
                 self.term.addRelationship (re.split (' ', self.line)[1])
                 self.term.addRelationshipType ('is-a')
 
+            # Save an "union_of" relationship.
+            #
+            if tag == 'union_of':
+                self.term.addRelationship (re.split (' ', self.line)[1])
+                self.term.addRelationshipType ('union_of')
+
             # Save a relationship.
             #
             if tag == 'relationship':
